# gro_parser

./: .gitignore  README.md  pyproject.toml  setup.py
gro_parser/: __init__.py  atom.py  base_logger.py  gro.py  itp_description.json  residue.py  system.py  utils.py
gro_parser.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
