[tool.poetry]
name = "gro-parser"
version = "0.1.0"
description = ""
authors = ["Cecile Hilpert <cecile.hilpert@gmail.com>"]
readme = "README.md"
packages = [{include = "gro_parser"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
